# junkfs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
docs/: Cache.md  IO.md  design.md
fuse/: Cargo.toml  build.rs
fuse/c/: bridge.c
fuse/include/: fuse3_wrapper.h
fuse/src/: lib.rs
lib/: lib.rs
lib/cache/: lru.rs  mod.rs  pool.rs
lib/fs/: file.rs  filesystem.rs  inode.rs  ll.rs  mod.rs  namei.rs  superblock.rs
lib/logger/: logger.rs  mod.rs
lib/meta/: dentry.rs  imap.rs  inode.rs  kvstore.rs  meta.rs  meta_data.rs  meta_store.rs  mod.rs  sled.rs  super_block.rs
lib/store/: cache_store.rs  filestore.rs  mod.rs  stats.rs
lib/utils/: bitmap.rs  bitmap64.rs  mod.rs
src/: junkfs.rs  main.rs  mkfs.rs
