[package]
name = "junkfs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "junkfs"
path = "src/junkfs.rs"

[[bin]]
name = "mkfs"
path = "src/mkfs.rs"

[lib]
name = "junkfs"
path = "lib/lib.rs"

[dependencies]
bincode = "1.3.3"
fuser = "0.14.0"
libc = "0.2.155"
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
sled = "0.34.7"
