[package]
name = "junkfs"
version = "0.1.0"
edition = "2021"
authors = ["abbytsing@gmail.com"]
description = "a simple fuse based filesystem"

[[bin]]
name = "junkfs"
path = "src/junkfs.rs"

[[bin]]
name = "mkfs"
path = "src/mkfs.rs"

[lib]
name = "junkfs"
path = "lib/lib.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
fuser = "0.14.0"
libc = "0.2.155"
log = "0.4.21"
# mace-kv = "0.0.24"
mace-kv = { path = "/home/neo/mace" }
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
