[package]
name = "junkfs"
version = "0.1.0"
edition = "2024"
authors = ["abbytsing@gmail.com"]
description = "a simple fuse based filesystem"

[[bin]]
name = "junkfs"
path = "src/junkfs.rs"

[[bin]]
name = "mkfs"
path = "src/mkfs.rs"

[lib]
name = "junkfs"
path = "lib/lib.rs"

[features]
default = []
stats = []

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
junkfs-fuse = { path = "fuse" }
libc = "0.2.155"
log = "0.4.21"
mace-kv = "0.0.26"
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
